@@ -155,7 +155,7 @@ __ZN3KJS6Parser5parseEiPKtjPiS3_PNS_7UStringE
 __ZN3KJS6parserEv
 __ZN3KJS7CStringD1Ev
 __ZN3KJS7CStringaSERKS0_
-__ZN3KJS7Machine13dumpCallFrameEPKNS_9CodeBlockEPKNS_10ScopeChainEPNS_12RegisterFileEPKNS_8RegisterE
+__ZN3KJS7Machine13dumpCallFrameEPKNS_9CodeBlockEPNS_14ScopeChainNodeEPNS_12RegisterFileEPKNS_8RegisterE
 __ZN3KJS7UString3Rep11computeHashEPKti
 __ZN3KJS7UString3Rep4nullE
 __ZN3KJS7UString3Rep7destroyEv
